Fix overflow text

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -52,6 +52,8 @@
   .list {
     .item {
       padding: 8px 0;
+      word-break: break-word; 
+      overflow-wrap: break-word;
 
       @media (min-width: 768px) {
         padding: 12px 0;
